@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: Top level Union is not supported currently; use a subquery for the union
