@@ -33,6 +33,8 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    HIVE-92. Fixed union all for non-embedded query. (Namit Jain through zshao)
+
     HIVE-93. Dynamic serde to handle _-prefixed column names in DDL.
     (Pete Wyckoff through zshao)
 
